--- a/app/src/main/res/values-night/color.xml
+++ b/app/src/main/res/values-night/color.xml
@@ -12,5 +12,11 @@
     <color name="item_text_color">#FFFAFA</color>
     <color name="list_backround_color">#686868</color>
     <color name="icon_color">#ffffff</color>
-    <color name="edit_text_color">#4B4B4B</color>
+    <color name="edit_text_color">#FFFFFF</color>
+    <color name="add_image_color">#7EE4E4E4</color>
+    <color name="card_color">#FAFAFA</color>
+    <color name="hint_text_color">#C5C5C5</color>
+
+    <color name="add_price_color">#78DF7D</color>
+    <color name="add_price_quantity">#B8A502</color>
 </resources>
