--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -18,12 +18,13 @@
             android:layout_width="@dimen/_240sdp"
             android:layout_height="@dimen/_40sdp"
             android:hint="Ürünü Ara..."
+            android:textColorHint="@color/hint_text_color"
             android:drawablePadding="@dimen/_7sdp"
             android:drawableStart="@drawable/ic_baseline_search_24"
             android:id="@+id/searcBar"
             android:textColor="@color/black"
             android:background="@drawable/search_bar_back"
-            android:textSize="@dimen/_20ssp"
+            android:textSize="@dimen/_17ssp"
             android:textStyle="bold"
             android:paddingStart="@dimen/_10sdp"
             android:layout_gravity="center">
@@ -44,6 +45,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_height="0dp"
         android:id="@+id/productRec"
+        tools:listitem="@layout/product_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
