--- a/app/src/main/res/layout/fragment_list_product.xml
+++ b/app/src/main/res/layout/fragment_list_product.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/list_backround_color"
     tools:context=".ui.ListProductFragment">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -18,61 +17,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="C-STOK"
+            android:text="Siparişe Hazır Ürünler"
             android:textColor="@color/white"
-            android:textSize="@dimen/_25ssp"
+            android:textSize="@dimen/_20ssp"
             android:textStyle="bold"
             android:layout_gravity="center">
         </TextView>
     </androidx.appcompat.widget.Toolbar>
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="@dimen/_10sdp"
-        app:cardCornerRadius="@dimen/_5sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cToolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_7sdp"
-                android:id="@+id/info"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:padding="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cToolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="0dp">
 
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="@dimen/_105sdp"
-                    android:layout_height="wrap_content"
-                    android:text="Ürün kodu"
-                    android:id="@+id/listProductName"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/_20ssp">
-                </TextView>
-                <TextView
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="wrap_content"
-                    android:text="Adet"
-                    android:id="@+id/listProductQuantity"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/_20ssp">
-                </TextView>
-                <TextView
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="wrap_content"
-                    android:text="Fiyat"
-                    android:id="@+id/listProductPrice"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/_20ssp">
-                </TextView>
-            </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -81,7 +40,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/info"
+                app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/cRec">
             </androidx.recyclerview.widget.RecyclerView>
             <com.getbase.floatingactionbutton.FloatingActionsMenu
@@ -89,6 +48,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_margin="@dimen/_16sdp"
+                android:id="@+id/floatingMenu"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:fab_labelStyle="@style/custom_floating_bar"
                 app:fab_addButtonPlusIconColor="@color/black"
@@ -99,9 +59,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:fab_colorNormal="@color/yellow"
-                    app:fab_title="İrsaliye Oluştur"
+                    app:fab_title="Siparişini Tamamla"
                     app:fab_colorPressed="@color/yellow"
-                    app:fab_icon="@drawable/bill"
+                    app:fab_icon="@drawable/confirmation_order"
                     android:id="@+id/bill">
 
                 </com.getbase.floatingactionbutton.FloatingActionButton>
@@ -110,6 +70,7 @@
                     android:layout_height="wrap_content"
                     app:fab_colorNormal="@color/yellow"
                     app:fab_title="Ürün Oluştur"
+                    app:fab_labelStyle="@style/custom_floating_bar"
                     app:fab_colorPressed="@color/yellow"
                     app:fab_icon="@drawable/adddd"
                     android:id="@+id/addProducT">
@@ -118,16 +79,5 @@
 
             </com.getbase.floatingactionbutton.FloatingActionsMenu>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-
-
-
-
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
