--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
 
     <color name="toolbar_color">#FFE500</color>
     <color name="yellow">#FFE500</color>
+    <color name="add_image_color">#7EE4E4E4</color>
+
+
 
     <color name="sheet_backround_color">#FFFFFF</color>
     <color name="backround_color">#FFFFFF</color>
@@ -20,7 +23,9 @@
     <color name="edit_text_color">#4B4B4B</color>
     <color name="button_text_color">#000000</color>
     <color name="icon_color">#000000</color>
-
+    <color name="add_price_color">#086E0D</color>
+    <color name="add_price_quantity">#B8A502</color>
+    <color name="hint_text_color">#C5C5C5</color>
 
     <color name="card_color">#FAFAFA</color>
     <color name="table_back">#C5C5C5</color>
