--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,16 +10,14 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/toolbar_color</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
 
         <!-- Customize your theme here. -->
     </style>
 
     <style name="custom_floating_bar">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/item_text_color</item>
         <item name="android:textStyle">bold</item>
-
-        <item name="background">@drawable/fab_button_backround</item>
     </style>
 </resources>
